--- a/src/_assets/css/style.css
+++ b/src/_assets/css/style.css
@@ -1,3 +1,13 @@
+.wrapper-stp {
+  font-weight: bold;
+  letter-spacing: 0.54px;
+  color: #fff;
+}
+.item-price-stp {
+  font-size: 18px;
+  line-height: 18px;
+  margin-bottom: 10px;
+}
 .item__container-stp {
   position: relative;
 }
@@ -51,6 +61,8 @@
   flex-direction: column;
   gap: 4px;
   margin: 4px 0;
+  font-size: 14px;
+  line-height: 14px;
 }
 .item__name-stp {
   text-overflow: ellipsis;
@@ -70,6 +82,22 @@
 .item-stp:hover {
   filter: brightness(1.4);
 }
+.sales-stp {
+  display: flex;
+  align-items: center;
+  margin-bottom: 12px;
+}
+.quantity-sales-heading-stp {
+  font-size: 18px;
+  line-height: 18px;
+}
+.quantity-sales-wrapper-stp {
+  font-size: 14px;
+  line-height: 18px;
+  text-align: right;
+  display: flex;
+  justify-content: space-between;
+}
 /* Range Slider Styles */
 ::selection {
   color: #fff;
@@ -77,6 +105,9 @@
 }
 .range-slider-stp {
   color: #fff;
+  font-size: 14px;
+  line-height: 14px;
+  margin-bottom: 12px;
 }
 .date-wrapper-stp {
   width: 100%;
@@ -105,7 +136,7 @@
 }
 .range-inputs-stp {
   position: relative;
-  margin-bottom: 10px;
+  margin-bottom: 14px;
 }
 .range-inputs-stp .range-input-stp {
   position: absolute;
@@ -135,4 +166,54 @@
   pointer-events: auto;
   -moz-appearance: none;
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
+}
+.total-value-stp {
+  color: #2fff00;
+}
+/* TABS */
+.tabs-container {
+  margin-bottom: 12px;
+  font-size: 14px;
+  line-height: 14px;
+}
+.tabs-heading {
+  font-size: 18px;
+  line-height: 18px;
+  margin-bottom: 12px;
+}
+.tabs-stp {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  gap: 10px;
+  margin-bottom: 12px;
+}
+.tab-stp {
+  --color: #0d8dc5;
+  --hover: #10a1e2;
+  background: none;
+  border: 2px solid;
+  line-height: 1;
+  padding: 5px 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  color: var(--color);
+  transition: 0.25s;
+}
+.tab-stp:hover,
+.tab-stp.active {
+  border-color: var(--hover);
+  color: #fff;
+  box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+  transform: translateY(-0.25em);
+}
+.prices-content-stp {
+  display: none;
+}
+.prices-content-stp.active {
+  display: flex;
+  justify-content: space-between;
+}
+.price-content-stp {
+  margin-bottom: 6px;
 }
